2009-08-19  Rupert Germann <rupi@gmx.li>
	* fix: displayCurrentRecord is now working again (thanks Krystian Szymukowicz)

2009-07-28  Rupert Germann <rupi@gmx.li>
	* fix: the pagebrowser in the newsadmin module didn't work correctly under TYPO3 4.2.x. Moved all locallang labels, icons and 
	  css styles to tt_news.

2009-06-14  Rupert Germann <rupi@gmx.li>
	* Added french labels for new localized options in constant-editor, extmanager and updater (thanks to Rachel Foucard)
	* added a new label to each updater function which displays information about what the updater is going to do.

2009-06-04  Rupert Germann <rupi@gmx.li>
	* new feature: added the new pagebrowser from the listview to the tt_news admin listview (class tx_ttnews_recordlist::renderListNavigation()) 
	* fix: the categorycount cache was always written no matter of a cached value was found or not.
	* fix: added missing () around the lifetime part of the getfromcache query for the internal caching.
	* changed the db-engine of the tt_news_cache table to innodb.
	
2009-06-02  Rupert Germann <rupi@gmx.li>
*** DB table changes ***
 	* connected the internal caching from tt_news to the TYPO3 caching framework (requires at least TYPO3 4.3). By default it's configured to 
 	  use the DB backend but of course it will work with all other available caching backEnds too (tested with memcached, APC, filecache and DB)
 	* Added a switch to the extmanager config where one can choose the "caching Engine" (options: internal, cachingFramework). If the caching 
 	  framework is not available (TYPO3 < v4.3) tt_news automatically falls back to the internal caching. 
 	* Moved the caching related functions to their own classfile: lib/class.tx_ttnews_cache.php
 	* changed the "lifetime" handling of cache entries to use the same system as the caching framework.
 	* changed the fieldnames of table tt_news_cache to make it work with the caching framework and the internal caching.