@@ -37,8 +37,8 @@ $EM_CONF[$_EXTKEY] = array(
 	'constraints' => array(
 		'depends' => array(
 			'cms' => '',
-			'php' => '4.2.2-5.2.99',
-			'typo3' => '4.0.0-4.3.99',
+			'php' => '5.0.0-5.3.99',
+			'typo3' => '4.1.0-4.3.99',
 		),
 		'conflicts' => array(
 		),
